--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,6 +4,7 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
          backupGlobals="false"
          colors="true"
+         verbose="true"
          bootstrap="vendor/autoload.php"
          failOnRisky="true"
          failOnWarning="true"
