--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "yii/di",
     "type": "library",
     "description": "Yii DI container",
-    "keywords": ["di", "dependency", "injection", "container"],
+    "keywords": ["di", "dependency", "injection", "container", "injector", "autowiring", "psr-11"],
     "homepage": "http://www.yiiframework.com/",
     "license": "MIT",
     "authors": [
