--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "psr/container": "1.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4",
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "provide": {
         "psr/container-implementation": "1.0.0"
