--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ install:
   - travis_retry composer install --prefer-dist --no-interaction
 
 script:
-  - |
-    vendor/bin/phpcs --standard=PSR2 src tests &&
-    vendor/bin/phpunit $PHPUNIT_FLAGS
+  - vendor/bin/phpcs --standard=PSR2 src tests
+  - phpdbg -qrr composer test -- --coverage-clover clover.xml
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover clover.xml
