Added phpbench; todo: figure out a way to get scrutinizer to not only run but also use these results

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,7 +15,7 @@
 
     <testsuites>
         <testsuite name="Yii di container tests">
-            <directory>./tests/</directory>
+            <directory>./tests/unit</directory>
         </testsuite>
     </testsuites>
 
