--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2",
-        "squizlabs/php_codesniffer": "^3.2"
+        "squizlabs/php_codesniffer": "^3.2",
+        "phpbench/phpbench": "^0.14.0"
     },
     "provide": {
         "psr/container-implementation": "1.0.0"
