--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,9 +1,7 @@
 filter:
   paths: [src/*]
 checks:
-  php:
-    code_rating: true
-    duplication: true
+  php: true
 tools:
   external_code_coverage:
     runs: 2
