--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ cache:
 install:
   - travis_retry composer self-update && composer --version
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer install --prefer-dist --no-intraction
+  - travis_retry composer install --prefer-dist --no-interaction
 script:
   - composer test
 after_script:
