--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require": {
         "php": "^7.1.0",
+        "ext-mbstring": "*",
         "psr/container": "1.0.0"
     },
     "require-dev": {
