--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "php": "^7.1.0",
         "ext-mbstring": "*",
-        "psr/container": "1.0.0"
+        "psr/container": "1.0.0",
+        "yiisoft/factory": "^3.0@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2",
