--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ script:
 
 after_script:
     - wget -c https://scrutinizer-ci.com/ocular.phar
-    - php php-ocular code-coverage:upload --format=php-clover coverage.clover
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
