--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
+        "league/container": "^3.2",
         "squizlabs/php_codesniffer": "^3.3",
         "phpbench/phpbench": "^0.14.0"
     },
