--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.3",
-        "phpbench/phpbench": "^0.17.0"
+        "phpbench/phpbench": "^0.17.0",
+        "league/container": "^3.2"
     },
     "provide": {
         "psr/container-implementation": "1.0.0"
