--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
         "yiisoft/factory": "^3.0@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "squizlabs/php_codesniffer": "^3.3",
+        "infection/infection": "^0.16.3",
+        "phan/phan": "^3.0.2",
+        "phpunit/phpunit": "^9.2",
         "phpbench/phpbench": "^0.17.0",
         "league/container": "^3.2"
     },
@@ -52,11 +53,9 @@
     },
     "scripts": {
         "test": [
-            "@install",
-            "phpdbg -qrr vendor/bin/phpunit --coverage-clover tests/output/clover.xml --coverage-html tests/output/coverage"
+            "phpunit --coverage-html coverage"
         ],
         "bench": [
-            "@install",
             "phpbench run"
         ]
     },
