Add use of injector to allow more complex definitions
See https://github.com/yiisoft/factory/pull/34 for examples.

Also add `ContainerInterface` definition in container by default
(but it still can be redefined).

--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,11 @@
         "infection/infection": "^0.17.0",
         "phan/phan": "^3.0",
         "phpunit/phpunit": "^9.3",
+        "yiisoft/injector": "^1.0@dev",
         "league/container": "^3.2"
     },
     "suggest": {
+        "yiisoft/injector": "^1.0@dev",
         "phpbench/phpbench": "To run benchmarks."
     },
     "provide": {
