Add use of injector to allow more complex definitions (#150)
See https://github.com/yiisoft/factory/pull/34 for examples.

Also add `ContainerInterface` definition in container by default
(but it still can be redefined).

--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,11 @@
         "phan/phan": "^3.0",
         "phpunit/phpunit": "^9.3",
         "phpbench/phpbench": "~0.17",
+        "yiisoft/injector": "^1.0@dev",
         "league/container": "^3.2"
     },
     "suggest": {
+        "yiisoft/injector": "^1.0@dev",
         "phpbench/phpbench": "To run benchmarks."
     },
     "provide": {
