--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Install dependencies with composer
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader
 
-      - name: Static analysis with phan
-        run: vendor/bin/phan --no-progress-bar --output-mode checkstyle | cs2pr --graceful-warnings --colorize
+      - name: Static analysis with psalm
+        run: vendor/bin/psalm --no-progress --output-format=checkstyle | cs2pr --graceful-warnings --colorize
