--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,14 @@
         "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "psr/container": "1.0.0",
-        "yiisoft/factory": "^3.0@dev"
+        "yiisoft/factory": "^3.0@dev",
+        "yiisoft/injector": "^1.0"
     },
     "require-dev": {
         "infection/infection": "^0.17.0",
         "vimeo/psalm": "^3.16",
         "phpunit/phpunit": "^9.3",
         "phpbench/phpbench": "~0.17",
-        "yiisoft/injector": "^1.0@dev",
         "league/container": "^3.2"
     },
     "suggest": {
