--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,10 @@ name: build
 
 jobs:
   tests:
-    name: PHP ${{ matrix.php-version }}-${{ matrix.os }}
+    name: PHP ${{ matrix.php }}-${{ matrix.os }}
+
     env:
-      extensions: curl, mbstring, dom, intl, json, libxml, xml, xmlwriter
+      extensions: mbstring
       key: cache-v1
 
     runs-on: ${{ matrix.os }}
@@ -19,7 +20,7 @@ jobs:
           - ubuntu-latest
           - windows-latest
 
-        php-version:
+        php:
           - "7.4"
           - "8.0"
 
@@ -31,7 +32,7 @@ jobs:
         id: cache-env
         uses: shivammathur/cache-extensions@v1
         with:
-          php-version: ${{ matrix.php-version }}
+          php-version: ${{ matrix.php }}
           extensions: ${{ env.extensions }}
           key: ${{ env.key }}
 
@@ -45,7 +46,7 @@ jobs:
       - name: Install PHP with extensions
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-version }}
+          php-version: ${{ matrix.php }}
           extensions: ${{ env.extensions }}
           ini-values: date.timezone='UTC'
           coverage: pcov
@@ -53,42 +54,38 @@ jobs:
 
       - name: Determine composer cache directory on Linux
         if: matrix.os == 'ubuntu-latest'
-        run: echo "::set-env name=COMPOSER_CACHE_DIR::$(composer config cache-dir)"
+        run: echo "COMPOSER_CACHE_DIR=$(composer config cache-dir)" >> $GITHUB_ENV
 
       - name: Determine composer cache directory on Windows
         if: matrix.os == 'windows-latest'
-        run: ECHO "::set-env name=COMPOSER_CACHE_DIR::~\AppData\Local\Composer"
+        run: ECHO "COMPOSER_CACHE_DIR=~\AppData\Local\Composer" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Cache dependencies installed with composer
         uses: actions/cache@v2
         with:
           path: ${{ env.COMPOSER_CACHE_DIR }}
-          key: php${{ matrix.php-version }}-composer-${{ hashFiles('**/composer.json') }}
+          key: php${{ matrix.php }}-composer-${{ hashFiles('**/composer.json') }}
           restore-keys: |
-            php${{ matrix.php-version }}-composer-
+            php${{ matrix.php }}-composer-
 
       - name: Install dependencies with composer php 7.4
-        if: matrix.php-version == '7.4'
-        run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader
+        if: matrix.php == '7.4'
+        run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
       - name: Install dependencies with composer php 8.0
-        if: matrix.php-version == '8.0'
-        run: composer update --ignore-platform-reqs --prefer-dist --no-interaction --no-progress --optimize-autoloader
+        if: matrix.php == '8.0'
+        run: composer update --ignore-platform-reqs --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
       - name: Run tests with phpunit and coverage on Linux php 7.4
-        if: matrix.os == 'ubuntu-latest' && matrix.php-version == '7.4'
-        run: vendor/bin/phpunit --coverage-clover=coverage.clover
+        if: matrix.os == 'ubuntu-latest' && matrix.php == '7.4'
+        run: vendor/bin/phpunit --coverage-clover=coverage.clover --colors=always
 
-      - name: Run tests with phpunit without coverage on Linux php 8.0
-        if: matrix.os == 'ubuntu-latest' && matrix.php-version == '8.0'
-        run: vendor/bin/phpunit
-
-      - name: Run tests with phpunit without coverage on Windows
-        if: matrix.os == 'windows-latest'
-        run: vendor/bin/phpunit
+      - name: Run tests with phpunit without coverage on Windows php 7.4 - 8.0 and Linux php 8.0
+        if: matrix.os != 'ubuntu-latest' || matrix.php != '7.4'
+        run: vendor/bin/phpunit --colors=always
 
       - name: Upload code coverage scrutinizer on Linux php 7.4
-        if: matrix.os == 'ubuntu-latest' && matrix.php-version == '7.4'
+        if: matrix.os == 'ubuntu-latest' && matrix.php == '7.4'
         run: |
           wget https://scrutinizer-ci.com/ocular.phar
           php ocular.phar code-coverage:upload --format=php-clover coverage.clover
