--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "vimeo/psalm": "^4.0",
         "infection/infection": "^0.20.0",
         "phpunit/phpunit": "^9.3",
-        "phpbench/phpbench": "~1.0",
+        "phpbench/phpbench": "^1.0.0",
         "league/container": "^3.2"
     },
     "suggest": {
