--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ jobs:
     name: PHP ${{ matrix.php }}-${{ matrix.os }}
 
     env:
-      extensions: mbstring
       key: cache-v1
 
     runs-on: ${{ matrix.os }}
@@ -26,28 +25,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
 
-      - name: Setup cache environment
-        id: cache-env
-        uses: shivammathur/cache-extensions@v1
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: ${{ env.extensions }}
-          key: ${{ env.key }}
-
-      - name: Cache extensions
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.cache-env.outputs.dir }}
-          key: ${{ steps.cache-env.outputs.key }}
-          restore-keys: ${{ steps.cache-env.outputs.key }}
-
-      - name: Install PHP with extensions
+      - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: ${{ env.extensions }}
           ini-values: date.timezone='UTC'
           coverage: pcov
           tools: composer:v2
@@ -58,7 +41,7 @@ jobs:
 
       - name: Determine composer cache directory on Windows
         if: matrix.os == 'windows-latest'
-        run: ECHO "COMPOSER_CACHE_DIR=~\AppData\Local\Composer" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        run: echo "COMPOSER_CACHE_DIR=~\AppData\Local\Composer" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Cache dependencies installed with composer
         uses: actions/cache@v2
@@ -68,6 +51,9 @@ jobs:
           restore-keys: |
             php${{ matrix.php }}-composer-
 
+      - name: Update composer
+        run: composer self-update
+
       - name: Install dependencies with composer php 7.4
         if: matrix.php == '7.4'
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
@@ -76,16 +62,5 @@ jobs:
         if: matrix.php == '8.0'
         run: composer update --ignore-platform-reqs --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
-      - name: Run tests with phpunit and coverage on Linux php 7.4
-        if: matrix.os == 'ubuntu-latest' && matrix.php == '7.4'
-        run: vendor/bin/phpunit --coverage-clover=coverage.clover --colors=always
-
-      - name: Run tests with phpunit without coverage on Windows php 7.4 - 8.0 and Linux php 8.0
-        if: matrix.os != 'ubuntu-latest' || matrix.php != '7.4'
+      - name: Run tests with phpunit
         run: vendor/bin/phpunit --colors=always
-
-      - name: Upload code coverage scrutinizer on Linux php 7.4
-        if: matrix.os == 'ubuntu-latest' && matrix.php == '7.4'
-        run: |
-          wget https://scrutinizer-ci.com/ocular.phar
-          php ocular.phar code-coverage:upload --format=php-clover coverage.clover
