--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
 
       - name: Install PHP
         uses: shivammathur/setup-php@v2
@@ -40,8 +40,11 @@ jobs:
           restore-keys: |
             php${{ matrix.php }}-composer-
 
+      - name: Update composer
+        run: composer self-update
+
       - name: Install dependencies with composer
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
-      - name: Static analysis with psalm
-        run: vendor/bin/psalm --no-progress --output-format=checkstyle | cs2pr --graceful-warnings --colorize
+      - name: Static analysis
+        run: vendor/bin/psalm --shepherd --stats --output-format=checkstyle | cs2pr --graceful-warnings --colorize
