--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
     },
     "scripts": {
         "test": [
-            "phpunit --coverage-html coverage"
+            "phpunit --colors --no-interaction"
         ]
     },
     "scripts-descriptions": {
