Batch add test-watch script and use testdox style for test script

--- a/composer.json
+++ b/composer.json
@@ -59,9 +59,8 @@
         }
     },
     "scripts": {
-        "test": [
-            "phpunit --colors --no-interaction"
-        ]
+        "test": "phpunit --testdox --no-interaction",
+        "test-watch": "phpunit-watcher watch"
     },
     "scripts-descriptions": {
         "test": "Run all tests"
