--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-mbstring": "*",
-        "psr/container": "1.0.0",
+        "psr/container": "^1.0",
         "yiisoft/factory": "^3.0@dev",
         "yiisoft/injector": "^1.0"
     },
