Adopt to yiisoft/definitions

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "psr/container": "^1.0",
+        "yiisoft/definitions": "3.0.x-dev",
         "yiisoft/factory": "^3.0@dev",
         "yiisoft/injector": "^1.0"
     },
