--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "psr/container": "^1.0",
-        "yiisoft/factory": "^3.0@dev",
+        "yiisoft/definitions": "3.0.x-dev",
         "yiisoft/injector": "^1.0"
     },
     "require-dev": {
