--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "psr/container": "^1.0",
-        "yiisoft/definitions": "3.0.x-dev",
-        "yiisoft/injector": "^1.0"
+        "yiisoft/definitions": "3.0.x-dev"
     },
     "require-dev": {
         "league/container": "^3.3",
@@ -34,7 +33,8 @@
         "phpunit/phpunit": "^9.4",
         "roave/infection-static-analysis-plugin": "^1.6",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.2"
+        "vimeo/psalm": "^4.2",
+        "yiisoft/injector": "^1.0"
     },
     "suggest": {
         "yiisoft/injector": "^1.0@dev",
