--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "forum": "https://www.yiiframework.com/forum/",
         "wiki": "https://www.yiiframework.com/wiki/",
         "irc": "irc://irc.freenode.net/yii",
+        "chat": "https://t.me/yii3en",
         "source": "https://github.com/yiisoft/di"
     },
     "require": {
@@ -30,9 +31,9 @@
         "league/container": "^4.2",
         "phpbench/phpbench": "^1.2.0",
         "phpunit/phpunit": "^9.5",
-        "roave/infection-static-analysis-plugin": "^1.14",
+        "roave/infection-static-analysis-plugin": "^1.16",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.13",
+        "vimeo/psalm": "^4.18",
         "yiisoft/injector": "^1.0",
         "yiisoft/test-support": "^1.3"
     },
