Add allow-plugins to config section in composer.json

--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,10 @@
         "test": "Run all tests"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "infection/extension-installer": true,
+            "composer/package-versions-deprecated": true
+        }
     }
 }
