--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "psr/container": "^1.0",
-        "yiisoft/definitions": "^1.0"
+        "yiisoft/definitions": "^1.0|^2.0"
     },
     "require-dev": {
         "league/container": "^4.2",
