--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^8.0",
         "ext-mbstring": "*",
         "psr/container": "^1.1|^2.0",
-        "yiisoft/definitions": "^1.0|^2.0"
+        "yiisoft/definitions": "^3.0"
     },
     "require-dev": {
         "league/container": "^4.2",
@@ -33,11 +33,11 @@
         "phpbench/phpbench": "^1.2.0",
         "phpunit/phpunit": "^9.5",
         "rector/rector": "^0.14.3",
-        "roave/infection-static-analysis-plugin": "^1.16",
+        "roave/infection-static-analysis-plugin": "^1.25",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.18",
+        "vimeo/psalm": "^4.29",
         "yiisoft/injector": "^1.0",
-        "yiisoft/test-support": "^1.3"
+        "yiisoft/test-support": "^3.0"
     },
     "suggest": {
         "yiisoft/injector": "^1.0",
