--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "issues": "https://github.com/yiisoft/di/issues?state=open",
         "forum": "https://www.yiiframework.com/forum/",
         "wiki": "https://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
+        "irc": "ircs://irc.libera.chat:6697/yii",
         "chat": "https://t.me/yii3en",
         "source": "https://github.com/yiisoft/di"
     },
