--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,12 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-mbstring": "*",
         "psr/container": "^1.1|^2.0",
-        "yiisoft/definitions": "^3.0"
+        "yiisoft/definitions": "^3.0",
+        "yiisoft/var-dumper": "^1.7",
+        "symfony/console": "^5.4|^6.0"
     },
     "require-dev": {
         "league/container": "^4.2",
@@ -47,7 +49,8 @@
         "spatie/phpunit-watcher": "^1.23",
         "vimeo/psalm": "^4.30|^5.7",
         "yiisoft/injector": "^1.0",
-        "yiisoft/test-support": "^3.0"
+        "yiisoft/test-support": "^3.0",
+        "yiisoft/config": "^1.3"
     },
     "suggest": {
         "yiisoft/injector": "^1.0",
@@ -66,6 +69,14 @@
             "Yiisoft\\Di\\Tests\\": "tests"
         }
     },
+    "extra": {
+        "config-plugin-options": {
+            "source-directory": "config"
+        },
+        "config-plugin": {
+            "params": "params.php"
+        }
+    },
     "scripts": {
         "test": "phpunit --testdox --no-interaction",
         "test-watch": "phpunit-watcher watch"
@@ -77,7 +88,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "infection/extension-installer": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "yiisoft/config": false
         }
     }
 }
