--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,10 @@ composer.phar
 # Mac DS_Store Files
 .DS_Store
 
-# phpunit itself is not needed
-phpunit.phar
-# local phpunit config
+# PhpUnit
+/phpunit.phar
 /phpunit.xml
-# phpunit cache
-.phpunit.result.cache
+/.phpunit.cache
 
 # Static analysis
 analysis.txt
