--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         "yiisoft/test-support": "^3.0",
         "yiisoft/config": "^1.3",
         "yiisoft/var-dumper": "^1.7",
-        "symfony/console": "^5.4|^6.0"
+        "symfony/console": "^5.4|^6.0|^7.0"
     },
     "suggest": {
         "yiisoft/injector": "^1.0",
