--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "php": "^8.1",
         "ext-mbstring": "*",
         "psr/container": "^1.1|^2.0",
-        "yiisoft/definitions": "^3.0"
+        "yiisoft/definitions": "^3.0",
+        "yiisoft/friendly-exception": "^1.1.0"
     },
     "require-dev": {
         "league/container": "^4.2",
