--- a/composer.json
+++ b/composer.json
@@ -32,23 +32,23 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "8.1 - 8.4",
         "ext-mbstring": "*",
-        "psr/container": "^1.1|^2.0",
+        "psr/container": "^1.1 || ^2.0",
         "yiisoft/definitions": "^3.0",
         "yiisoft/friendly-exception": "^1.1.0"
     },
     "require-dev": {
-        "league/container": "^5.0",
-        "maglnet/composer-require-checker": "^4.2",
-        "phpbench/phpbench": "^1.2.0",
-        "phpunit/phpunit": "^10.5",
-        "rector/rector": "^2.0",
-        "roave/infection-static-analysis-plugin": "^1.25",
-        "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^5.26.1",
-        "yiisoft/injector": "^1.0",
-        "yiisoft/test-support": "^3.0"
+        "league/container": "^5.0.1",
+        "maglnet/composer-require-checker": "^4.7.1",
+        "phpbench/phpbench": "^1.4.1",
+        "phpunit/phpunit": "^10.5.45",
+        "rector/rector": "^2.0.11",
+        "roave/infection-static-analysis-plugin": "^1.35",
+        "spatie/phpunit-watcher": "^1.24",
+        "vimeo/psalm": "^5.26.1 || ^6.10",
+        "yiisoft/injector": "^1.2",
+        "yiisoft/test-support": "^3.0.2"
     },
     "suggest": {
         "yiisoft/injector": "^1.0",
