--- a/composer.json
+++ b/composer.json
@@ -32,23 +32,22 @@
         }
     ],
     "require": {
-        "php": "8.1 - 8.4",
+        "php": "8.1 - 8.5",
         "ext-mbstring": "*",
         "psr/container": "^1.1 || ^2.0",
         "yiisoft/definitions": "^3.0",
         "yiisoft/friendly-exception": "^1.1.0"
     },
     "require-dev": {
+        "bamarni/composer-bin-plugin": "^1.8.3",
         "league/container": "^5.1.0",
         "maglnet/composer-require-checker": "^4.7.1",
         "phpbench/phpbench": "^1.4.1",
         "phpunit/phpunit": "^10.5.46",
         "rector/rector": "^2.0.17",
-        "roave/infection-static-analysis-plugin": "^1.35",
         "spatie/phpunit-watcher": "^1.24",
-        "vimeo/psalm": "^5.26.1 || ^6.12",
-        "yiisoft/injector": "^1.2",
-        "yiisoft/test-support": "^3.0.2"
+        "yiisoft/injector": "^1.2.1",
+        "yiisoft/test-support": "^3.1"
     },
     "suggest": {
         "yiisoft/injector": "^1.0",
@@ -74,10 +73,17 @@
     "scripts-descriptions": {
         "test": "Run all tests"
     },
+    "extra": {
+        "bamarni-bin": {
+            "bin-links": true,
+            "target-directory": "tools",
+            "forward-command": true
+        }
+    },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "infection/extension-installer": true,
+            "bamarni/composer-bin-plugin": true,
             "composer/package-versions-deprecated": true
         }
     }
